--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="author" content="Chinna Opticians">
 
     <!-- Favicon (optional) -->
-    <!-- Place a small icon file as favicon.ico or logo.png in your repo and update href -->
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 
     <!-- Google Font -->
@@ -312,7 +311,7 @@
             color: #d5dde5;
         }
 
-        /* Simple Book Eye Test Form */
+        /* Book Eye Test Form */
         .booking-form {
             margin-top: 25px;
             max-width: 420px;
@@ -350,15 +349,15 @@
             background-color: #fff;
             border-top: 1px solid #e1e4e8;
             border-bottom: 1px solid #e1e4e8;
-            padding: 20px 0;
+            padding: 20px 0 30px;
         }
 
         .contact-strip-inner {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            align-items: center;
-            gap: 15px;
+            align-items: flex-start;
+            gap: 20px;
         }
 
         .contact-strip p {
@@ -368,6 +367,35 @@
 
         .contact-actions .btn {
             margin-left: 6px;
+            margin-bottom: 6px;
+        }
+
+        /* Maps: two locations */
+        .maps-container {
+            margin-top: 15px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 16px;
+        }
+
+        .map-wrapper {
+            flex: 1 1 260px;
+            min-width: 260px;
+            max-width: 560px;
+        }
+
+        .map-label {
+            font-size: 0.85rem;
+            font-weight: 600;
+            margin-bottom: 6px;
+            color: #333;
+        }
+
+        .map-wrapper iframe {
+            width: 100%;
+            height: 220px;
+            border: 0;
+            border-radius: 12px;
         }
 
         /* Footer */
@@ -425,6 +453,10 @@
                 flex-direction: column;
                 align-items: flex-start;
             }
+
+            .map-wrapper iframe {
+                height: 220px;
+            }
         }
     </style>
 </head>
@@ -437,6 +469,7 @@
                 <a href="#top">
                     <img src="chinna opticians logo.jpg" alt="Chinna Opticians logo">
                 </a>
+                <span class="logo-text">Chinna Opticians</span>
             </div>
             <nav>
                 <ul>
@@ -469,7 +502,6 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <!-- Replace with an actual copyright-free image -->
                     <div class="hero-placeholder">
                         Add an eyewear or eye-test image here to showcase your store or clinic.
                     </div>
@@ -505,7 +537,7 @@
             </div>
         </section>
 
-        <!-- CLINIC SECTION + SIMPLE FORM -->
+        <!-- CLINIC SECTION + FORM -->
         <section class="clinic-section" id="clinic">
             <div class="container">
                 <h2>Eye Clinic & Checkup</h2>
@@ -542,7 +574,7 @@
             </div>
         </section>
 
-        <!-- CONTACT STRIP -->
+        <!-- CONTACT STRIP + TWO MAPS -->
         <section class="contact-strip" id="contact">
             <div class="container contact-strip-inner">
                 <div>
@@ -550,7 +582,35 @@
                     <p>
                         Akkayyapalem &middot; Adarsh Nagar (Ushodaya Center)
                     </p>
+
+                    <!-- Two maps for both locations -->
+                    <div class="maps-container">
+                        <!-- Map 1: Akkayyapalem Main Rd, near Jaggarao bridge, opp. Apollo Pharmacy... -->
+                        <div class="map-wrapper">
+                            <div class="map-label">Branch 1: Akkayyapalem</div>
+                            <iframe
+                                title="Chinna Opticians Akkayyapalem location map"
+                                src="YOUR_GOOGLE_MAPS_EMBED_URL_FOR_AKKAYYAPALEM_HERE"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
+
+                        <!-- Map 2: Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center... -->
+                        <div class="map-wrapper">
+                            <div class="map-label">Branch 2: Adarsh Nagar (Ushodaya Center)</div>
+                            <iframe
+                                title="Chinna Opticians Adarsh Nagar location map"
+                                src="YOUR_GOOGLE_MAPS_EMBED_URL_FOR_ADARSH_NAGAR_HERE"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="contact-actions">
                     <a href="tel:+918912725410" class="btn btn-secondary">Call Branch 1</a>
                     <a href="tel:+919705296144" class="btn btn-secondary">Call Branch 2</a>
