--- a/index.html
+++ b/index.html
@@ -111,32 +111,29 @@
 
         <!-- Testimonials -->
         <section class="testimonials">
-          <div class="container">
-             <h2 class="section-title">What our customers say</h2>
+    <div class="container">
+        <h2 class="section-title">What our customers say</h2>
         <div class="testimonial-grid">
             <div class="testimonial-card">
-                <p>"Good option for optical shop in akkayapalem. They have different and latest  varieties always. Staff is also experienced.
-Pricing is also less when compared to others and doctor consultation is available.
-I have been a customer since many years.
-Happy to recommend this shop."</p>
-                <strong>- Ramesh Wv</strong>
+                <blockquote>"Good option for optical shop... Happy to recommend this shop."</blockquote>
+                <cite>- Ramesh Wv, Akkayyapalem</cite>
             </div>
             <div class="testimonial-card">
-                <p>"The prices here are very low and reasonable, almost half that of other shops. I give 10 Star rating for this shop and I also suggest to all Vizag and Andhra people's  to make new spectacles at a discounted rate for you and your children at Chinna Opticals which was established in 1963.
-Chinna Opticians, near Jaggarao bridge Akkayyapalem main road vizag."</p>
-                <strong>- Goush Lazam</strong>
-             </div>
-            <div class="testimonial-card">
-                <p>"I highly recommend this optical shop to everyone. The service is friendly, fast,a geniune products and most importantly extremely accurate.. I have never had the slightest discrepancy regarding my eye power when I got checked here. The owner there gives us the best suggestions with heavy discounts."</p>
-                <strong>- Sainath Vaikuntham</strong>
+                <blockquote>"The prices here are very low... 10 Star rating!"</blockquote>
+                <cite>- Goush Lazam</cite>
             </div>
             <div class="testimonial-card">
-                <p>"Very good owner and staff. Very reasonable prices comparatively other shops. For poor people they will give cost price only without taking any profit. Excellent."</p>
-                <strong>- Chandramouli Bugatha</strong>
+                <blockquote>"I highly recommend... best suggestions with heavy discounts."</blockquote>
+                <cite>- Sainath Vaikuntham</cite>
+            </div>
+            <div class="testimonial-card">
+                <blockquote>"Very reasonable prices... Excellent."</blockquote>
+                <cite>- Chandramouli Bugatha</cite>
             </div>
         </div>
-        </div>  
-        </section>
+    </div>
+</section>
+
         
         <!-- CLINIC SECTION + FORM -->
         <section class="clinic-section" id="clinic">
@@ -235,5 +232,13 @@ Chinna Opticians, near Jaggarao bridge Akkayyapalem main road vizag."</p>
 <a href="https://wa.me/919959988116" class="whatsapp-float" target="_blank" rel="noopener">
     💬 WhatsApp
 </a>
+<div class="promo-banner">
+    <div class="container">
+        <p>🎉 <strong>Limited time:</strong> Flat 40% off on all frames! <a href="#contact">Visit now</a></p>
+    </div>
+</div>
+    <button class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+    ↑ Top
+    </button>
 </body>
 </html>
